fixed margin spacing with nav and header section

--- a/css/index.css
+++ b/css/index.css
@@ -206,7 +206,7 @@ footer {
   align-items: center;
 }
 .home {
-  padding-top: 9.5%;
+  padding-top: 5%;
 }
 .home header img {
   width: 100%;
