--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,6 @@
 // Home Content
 .home {
-  padding-top: 9.5%;
+  padding-top: 5%;
   
     header {
         img {
